# standalone-llvmpass

./: CMakeLists.txt  MyPass.cpp  README.md  env-llvm1814.sh  flavor.bc  flavor.c  output  wk.sh
